--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -2,6 +2,28 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+#spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #fcd779;
+  border-top: 4px solid white;
+  border-radius: 50%;
+  animation: spin 1.2s ease-in-out infinite;
+}
+
+@keyframes spin {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+.loading-container {
+  height: 100vh;
+}
+
+.loading-spinner {
+  height: 100%;
+}
+
 .header-container h1 {
   text-transform: uppercase;
   letter-spacing: 1px;
