--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -3,21 +3,40 @@ body {
 }
 
 #spinner {
-  width: 40px;
+  text-transform: uppercase;
   height: 40px;
+  letter-spacing: 1px;
   border: 4px solid #fcd779;
   border-top: 4px solid white;
   border-radius: 50%;
-  animation: spin 1.2s ease-in-out infinite;
+  animation: pulse 1.2s alternate infinite;
+  -webkit-animation: pulse 1.2s alternate infinite;
 }
 
-@keyframes spin {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(360deg);}
+@keyframes pulse {
+  from { border: 4px solid #fcd779; border-top: 4px solid white; }
+  to { border: 4px solid #fdf900; border-top: 4px solid white; }
+}
+
+@-webkit-keyframes pulse {
+  from { border: 4px solid #fcd779; border-top: 4px solid white; }
+  to { border: 4px solid #fdf900; border-top: 4px solid white; }
 }
 
 .loading-container {
   height: 100vh;
+  animation: grow 1s linear;
+  -webkit-animation: grow 1s linear;
+}
+
+@keyframes grow {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+@-webkit-keyframes grow {
+  from { width: 0; }
+  to {width: 100%; }
 }
 
 .loading-spinner {
