added some borders to header container to visualize layout

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -39,8 +39,16 @@ body {
   to {width: 100%; }
 }
 
+.graph-container {
+  padding: 10px;
+}
+
 .loading-spinner {
   height: 100%;
+}
+
+.header-container {
+  border: 1px solid black;
 }
 
 .header-container h1 {
