Added styling for footer component

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -62,3 +62,23 @@ body {
   padding: 5px;
   margin: 5px;
 }
+
+.footer-container {
+  border: 1px solid black;
+}
+
+.footer-container h1 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 14px;
+}
+
+.footer-title {
+  border: 1px solid black;
+  padding: 5px;
+  margin: 5px;
+}
+
+.copyright-icon {
+  margin: 5px;
+}
